...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/emailTxtBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"/>
...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/passwordTxtBox"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"/>
...
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:text="Login"
            android:textColor="@color/blue"
            android:background="@drawable/button_outline"
            android:layout_gravity="center_vertical">
        </Button>

        <Space
...
