<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAddClassActivity">

    <Button
        android:id="@+id/studentAddClassButton"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="50dp"
        android:layout_weight="4"
        android:background="@drawable/button_outline"
        android:text="@string/add"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="@+id/classCodeText"
        app:layout_constraintStart_toStartOf="@+id/classCodeText"
        app:layout_constraintTop_toBottomOf="@+id/classCodeText" />

    <EditText
        android:id="@+id/classCodeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="100dp"
        android:ems="10"
        android:hint="@string/class_code"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>